test/should-fail/检查返回值-12.j
function test takes nothing returns nothing
    return 0
endfunction